--- a/thesis.tex
+++ b/thesis.tex
@@ -37,6 +37,8 @@
 %tables that allow footnotes
 \usepackage{tabularx}
 
+\usepackage{caption}
+
 \renewcommand{\chaptername}{}
 
 % Renders two images side-by-side & scales them so height is identical
